--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
     <meta name="keywords" lang="zh-CN" content="GitMax,GitHub,互粉,添加follower,加星,star,加好友">
     <meta name="description" lang="zh-CN"
           content="GitMax是专为GitHub用户提高影响力的网站，为你找到水平相当，志同道合的人。在GitHub上互加好友，共同进步。提供优质、简单、快捷的好友管理工具和服务，杜绝手动互加好友中会出现的用机器人刷粉，先关注后取消等等恶意行为。 真正是“由程序员开发，为程序员服务”的优质首选平台，为你带来“Set it and forget it”的优质体验。">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png"/>
@@ -36,6 +38,8 @@
 <body>
 <div id="app"/>
 <script src="dist/bundle.js" type="text/javascript"></script>
+
+<!-- Google Analytics -->
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
@@ -51,8 +55,24 @@
 
   ga('create', 'UA-89412221-1', 'auto');
   ga('send', 'pageview');
-
 </script>
+
+<!-- 美恰 -->
+<script type='text/javascript'>
+  (function(m, ei, q, i, a, j, s) {
+    m[i] = m[i] || function() {
+          (m[i].a = m[i].a || []).push(arguments)
+        };
+    j = ei.createElement(q),
+        s = ei.getElementsByTagName(q)[0];
+    j.async = true;
+    j.charset = 'UTF-8';
+    j.src = '//static.meiqia.com/dist/meiqia.js';
+    s.parentNode.insertBefore(j, s);
+  })(window, document, 'script', '_MEIQIA');
+  _MEIQIA('entId', 54644);
+</script>
+
 </body>
 </html>
 
