Use particle-js for background

--- a/client/index.html
+++ b/client/index.html
@@ -57,21 +57,21 @@
   ga('send', 'pageview');
 </script>
 
-<!-- 美恰 -->
-<script type='text/javascript'>
-  (function(m, ei, q, i, a, j, s) {
-    m[i] = m[i] || function() {
-          (m[i].a = m[i].a || []).push(arguments)
-        };
-    j = ei.createElement(q),
-        s = ei.getElementsByTagName(q)[0];
-    j.async = true;
-    j.charset = 'UTF-8';
-    j.src = '//static.meiqia.com/dist/meiqia.js';
-    s.parentNode.insertBefore(j, s);
-  })(window, document, 'script', '_MEIQIA');
-  _MEIQIA('entId', 54644);
-</script>
+<!--&lt;!&ndash; 美恰 &ndash;&gt;-->
+<!--<script type='text/javascript'>-->
+  <!--(function(m, ei, q, i, a, j, s) {-->
+    <!--m[i] = m[i] || function() {-->
+          <!--(m[i].a = m[i].a || []).push(arguments)-->
+        <!--};-->
+    <!--j = ei.createElement(q),-->
+        <!--s = ei.getElementsByTagName(q)[0];-->
+    <!--j.async = true;-->
+    <!--j.charset = 'UTF-8';-->
+    <!--j.src = '//static.meiqia.com/dist/meiqia.js';-->
+    <!--s.parentNode.insertBefore(j, s);-->
+  <!--})(window, document, 'script', '_MEIQIA');-->
+  <!--_MEIQIA('entId', 54644);-->
+<!--</script>-->
 
 </body>
 </html>
