Remove react-redux

--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="content-language" lang="zh-CN">
-    <meta name="Copyright" content="GitMax-www.gitmax.cn">
-    <meta name="author" content="GitMax-www.gitmax.cn">
+    <meta name="Copyright" content="Clevo">
+    <meta name="author" content="Clevo">
 
-    <title>GitMax - 专业为你扩展GitHub影响力</title>
-    <meta name="title" lang="zh-CN" content="GitMax - 专业为你扩展GitHub影响力">
-    <meta property="og:title" lang="zh-CN" content="GitMax - 专业为你扩展GitHub影响力">
-    <meta name="keywords" lang="zh-CN" content="GitMax,GitHub,互粉,添加follower,加星,star,加好友">
-    <meta name="description" lang="zh-CN"
-          content="GitMax是专为GitHub用户提高影响力的网站，为你找到水平相当，志同道合的人。在GitHub上互加好友，共同进步。提供优质、简单、快捷的好友管理工具和服务，杜绝手动互加好友中会出现的用机器人刷粉，先关注后取消等等恶意行为。 真正是“由程序员开发，为程序员服务”的优质首选平台，为你带来“Set it and forget it”的优质体验。">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Clevo</title>
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png"/>
